--- a/Juypter_seaborn.ipynb
+++ b/Juypter_seaborn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0e0b8b62",
    "metadata": {},
    "outputs": [
@@ -2268,7 +2268,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "seaborn",
+   "display_name": "matplotlibb",
    "language": "python",
    "name": "python3"
   },
@@ -2282,7 +2282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
